<resources>
    <string name="app_name">Surround Test</string>
    <string name="frontleft">Front left</string>
    <string name="frontright">Front right</string>
    <string name="center">Center</string>
    <string name="subwoofer">Subwoofer</string>
    <string name="rearleft">Rear left</string>
    <string name="rearright">Rear right</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="please_enable_wifi">Please enable WiFi</string>
    <string name="please_cast">This app does not work unless it is casting. Please cast the app</string>
    <string name="media_route_menu_title">Google Cast</string>

</resources>
